--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,14 +10,15 @@ dependencies:
   flutter:
     sdk: flutter
 
+  sqflite: ^2.4.2
+  http: ^1.3.0
+  provider: ^6.1.2
+  google_fonts: ^6.2.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-
-  http: ^1.3.0
-  provider: ^6.1.2
-  google_fonts: ^6.2.1
 
 flutter:
   uses-material-design: true
